--- a/Workflows/07_Persistance/Persistence_OpenAI.ipynb
+++ b/Workflows/07_Persistance/Persistence_OpenAI.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "0561076c",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
     "    prompt = f'generate a joke on the topic {state[\"topic\"]}'\n",
     "    response = llm.invoke(prompt).content\n",
     "\n",
-    "    return {'joke': response}"
+    "    return {'joke': response}s"
    ]
   },
   {
@@ -558,7 +558,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "LangGraph-Tutorials",
    "language": "python",
    "name": "python3"
   },
@@ -572,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
